--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 <body>
     <div class="mobile-container">
         <div class="header">
-            <h1>Hey Saraswoti 💖<br>Will You Be My Valentine?</h1>
+            <h1>Hey My Baby 💖<br>Will You Be My Valentine?</h1>
             <div class="subtitle">Tap your answer below 👇</div>
         </div>
         
